Use version of orbit-db compatible with ipfs-http-client

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
       "express": "^4.16.4",
       "ipfs": "^0.34.4",
       "ipfs-http-client": "^30.0.0",
-      "orbit-db": "^0.19.9"
+      "orbit-db": "orbitdb/orbit-db#feat/new-acs"
     }
   }
