--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "express": "^4.16.4",
       "ipfs": "^0.34.4",
       "ipfs-http-client": "^30.0.0",
-      "orbit-db": "0.20.0-rc.1.1"
+      "orbit-db": "0.20.0-rc.1.1",
+      "orbit-db-kvstore": "1.5.0-rc2"
     }
   }
