--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dependencies": {
       "docopt": "^0.6.2",
       "express": "^4.16.4",
-      "ipfs": "^0.34.4",
+      "ipfs": "~0.35.0",
       "ipfs-http-client": "^30.0.0",
       "orbit-db": "~0.20.0"
     }
