--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
       "docopt": "~0.6.2",
       "hapi": ">17.0.0",
       "http2":"^3.2.0",
-      "ipfs": "^0.35.0",
+      "ipfs": "^0.36.3",
       "ipfs-http-client": "^30.0.0",
-      "orbit-db": "^0.20.0"
+      "orbit-db": "^0.21.1",
+      "susie": "^3.0.0"
     }
   }
