--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "orbit-db-http-api",
-    "version": "0.3.0-rc.4",
-    "description": "An HTTP API Server for the OrbitDB distributed peer-to-peer database",
-    "main": "src/cli.js",
-    "keywords": [
-      "orbitdb",
-      "orbit-db",
-      "http",
-      "api",
-      "server",
-      "peer-to-peer",
-      "database",
-      "db"
-    ],
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Phillip Mackintosh, Hayden Young",
-    "license": "MIT",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/orbitdb/orbit-db-http-api.git"
-    },
-    "engines": {
-      "node": ">=10.0.0"
-    },
-    "dependencies": {
-      "docopt": "~0.6.2",
-      "hapi": ">17.0.0",
-      "http2":"^3.2.0",
-      "ipfs": "^0.36.3",
-      "ipfs-http-client": "^30.0.0",
-      "orbit-db": "^0.21.1",
-      "susie": "^3.0.0"
-    }
+  "name": "orbit-db-http-api",
+  "version": "0.3.0-rc.4",
+  "description": "An HTTP API Server for the OrbitDB distributed peer-to-peer database",
+  "main": "src/cli.js",
+  "keywords": [
+    "orbitdb",
+    "orbit-db",
+    "http",
+    "api",
+    "server",
+    "peer-to-peer",
+    "database",
+    "db"
+  ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Phillip Mackintosh, Hayden Young",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/orbitdb/orbit-db-http-api.git"
+  },
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "dependencies": {
+    "docopt": "~0.6.2",
+    "hapi": ">17.0.0",
+    "http2": "^3.2.0",
+    "ipfs": "^0.36.3",
+    "ipfs-http-client": "^30.0.0",
+    "js-logger": "^1.6.0",
+    "orbit-db": "^0.21.1",
+    "susie": "^3.0.0"
   }
+}
