Fix docker hub push

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,6 @@ stages:
     - task: Docker@2
       displayName: Push image
       inputs:
-        containerRegistry: |
-          $(dockerHub)
-          repository: $(imageName)
-        command: push
-        tags: |
-          latest
+        containerRegistry: 'OrbitDB Docker Hub'
+        command: 'push'
+        tags: 'latest'
