--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,11 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '**/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'OrbitDB Docker Hub'
+        repository: 'orbitdb/orbit-db-http-api'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
     - task: Docker@2
       displayName: Push image
       inputs:
