--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "url": "https://github.com/orbitdb/orbit-db-http-api.git"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=12.0.0"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "docopt": "~0.6.2",
-    "hapi": ">17.0.0",
+    "hapi": "^18.1.0",
     "http2": "^3.2.0",
     "ipfs": "^0.50.2",
     "ipfs-http-client": "^47.0.0",
