--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,9 +2,9 @@ name: Docker
 
 on:
   push:
-    # Publish `develop` as Docker `latest` image.
+    # Publish `debug` as Docker `debug` image.
     branches:
-      - develop
+      - debug
 
     # Publish `v1.2.3` tags as releases.
     tags:
@@ -44,9 +44,6 @@ jobs:
 
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "develop" ] && VERSION=latest
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
