Update branch tigger

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+- debug
 
 resources:
 - repo: self
@@ -28,7 +28,7 @@ stages:
         command: 'build'
         Dockerfile: '**/Dockerfile'
         tags: |
-          latest
+          debug
           $(tag)
     - task: Docker@2
       displayName: Push image
@@ -37,5 +37,5 @@ stages:
         repository: 'orbitdb/orbit-db-http-api'
         command: 'push'
         tags: |
-          latest
+          debug
           $(tag)
